pushing for Nico

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,6 +4,10 @@
 
 @layer components {
     .btn {
-        @apply mt-3 rounded-lg py-1 px-5 inline-block font-medium cursor-pointer;
+        @apply mt-3 rounded-lg py-1 px-5 inline-block font-medium text-center cursor-pointer;
     }
+
+    /* .back {
+        @apply mt-3 rounded-lg py-1 px-5 inline-block font-medium text-center cursor-pointer;
+    } */
 }
