--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5">
+  <body class="container mx-auto mt-20 px-5 dark:bg-slate-900">
+    <main>
       <%= yield %>
     </main>
   </body>
