dark mode styling

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,7 +7,11 @@
         @apply mt-3 rounded-lg py-1 px-5 inline-block font-medium text-center cursor-pointer;
     }
 
-    /* .back {
-        @apply mt-3 rounded-lg py-1 px-5 inline-block font-medium text-center cursor-pointer;
-    } */
+    .back {
+        @apply mb-3 rounded-lg px-2 inline-block font-medium text-center cursor-pointer bg-red-200;
+    }
+
+    .task_card {
+        @apply dark:bg-slate-800 border border-grey-200 dark:text-purple-200 dark:border-purple-200 rounded-md p-3 bg-purple-100 drop-shadow-xl flex flex-row w-3/5;
+    }
 }
