--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,7 +5,7 @@
     </p>
   <% end %>
 
-  <%= link_to "Back to full list", tasks_path, class: "mb-3 rounded-lg px-2 inline-block font-medium text-center cursor-pointer bg-purple-200" %>
+  <%= link_to "Back to full list", tasks_path, class: "back" %>
 
   <div class="task_card dark:bg-slate-800 border border-grey-200 dark:text-purple-200 dark:border-purple-200 rounded-md p-3 bg-purple-100 drop-shadow-xl flex flex-row w-3/5">
 
