--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -10,7 +10,7 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li class="border border-grey-200 rounded-md p-3 bg-grey-100 shadow mt-1 ">
+    <li class="mt-3 dark:bg-slate-800 border border-grey-200 dark:text-purple-200 dark:border-purple-200 rounded-md p-3 bg-purple-100 drop-shadow-xl  w-3/5">
       <% if task.completed? %>
         <i class="fa-regular fa-square-check"></i>
       <% else %>
